#             predictions and use these latter ones to assess uncertainty (usefule when there are many Xs including categorical ones);
# 	Fbounds.pred: assesses uncertainty characterizing the contigency table crossing Y and Z, with two samples and using Xs to predict 
# 	respectively Y and Z
# 
# 	pw.assoc: correction of a bug related to the call of the weighting variable 
# 
# ###################################################################################################################
# 1.4.2 Added function for using output of hotdeck functions for imputing missing values in a dataset
# 		
# 		create.imputed is a NEW function that uses the output of hotdeck functions to impute missing values
# 
# ####################################################################################################################
# 
# 1.4.1 Added function for comparing distributions, improved graphical comparisons
# 
# 		comp.cont is a NEW function for empirical comparison of the marginal distributions of the same numerical variable(s) 
# 		but estimated from two different data sources
# 
# 		plotCont plots and compares also the empirical cumulative distribution function estimated 
# 		from two different data sources
# 
# 
# ######################################################################################################################
# 
# 1.4.0 Addedd functions for plotting results, changes to some code for better management of the NAs
# 
# 		NND.hotdeck and RANDwNND.hotdeck NO longer trasform the categorical matching variables in dummies
# 		when the chosen distance function is defined only for numerical variables; in practice, mixed-type matching variables
# 		can only be used with the Gower's distance
# 
# fact2dummy: when a NA is observed for a categorical variable then the function puts NAs in all the dummy 
# variables generated from it
# 
# pw.assoc discards NAs before calculation of the associaione or PRE measures; removal follows the pairwise 